# precursor-writer

./: Cargo.toml  LICENSE  README.md
src/: editor.rs  export.rs  journal.rs  main.rs  render.rs  storage.rs  typewriter.rs  ui.rs
writer-core/: Cargo.toml
writer-core/src/: buffer.rs  lib.rs  markdown.rs  serialize.rs
